# casket

./: CLAUDE.md  README.md
casket/: Cargo.toml
casket/src/: config.rs  database.rs  main.rs  processor.rs  scanner.rs
media/: iphon13.HEIC
