[package]
name = "casket"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
image = { version = "0.25", features = ["avif", "webp"] }
libraw-rs = "0.0.4" # 要ビルド時 libraw 開発ライブラリ
ffmpeg-next = { version = "7.0", features = ["static"] } # 要ビルド時 ffmpeg 開発ライブラリ (static link試行)
rusqlite = { version = "0.31", features = ["bundled"] }
exif = { package = "kamadak-exif", version = "0.6.1" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
# libheif-rs = "1.0"  # 外部ライブラリ依存のため一時的に無効化
